2004-04-27 arne

	* changed CControlListener and added a method to intercept modifier clicks so the listener can decide if the control should handle
	  this click. This makes it easy to implement some kind of 'MIDI Learn' functionality.
	  Note: you need to implement this new method in your CControlListener, otherwise there will be compile errors. If you don't want 
	        this feature, just return 0.
	* changed all controls to support the new CControlListener method.
	* mac: bugfix for CTextEdit::takeFocus under quartz.
	* mac: changed fonts from arial to helvetica as on some OS X installations arial is not installed.
	
2004-04-17 arne

	* windows: support for alpha blended images like it is on Mac OS X with quartz
		   note: this implementation uses libpng (makro is USE_LIBPNG)
	* CDrawContext::setClipRect uses the offset now
	* COptionMenu::getSubMenu added
	* mac: fixed some quartz drawing stuff
	* mac: fix for CFrame::getPosition with quartz
	* mac: removed CARBON_EVENTS macro as it only works with QUARTZ
	
2004-04-11 arne
	
	* CViewContainer should be completely nestable now
	* mac: implemented the quartz offscreencontext for existing bitmaps
	
2004-03-23 arne

	* CTextEdit use the CParamDisplay::stringConvert functions to draw text
	* Fix of possible crash in CFileSelector::run
	* CFM Carbon plugs can now draw text antialiased even if the host does not support it
	(Thanks to Wolfram Franke for this stuff)

	* mac: added waitDoubleClick and waitDrag with carbon events

2004-03-19 arne

	* add CView::getFrameTopLeftPos method to get the topleft position of the view relative to the frame
	* call AEffGUIEditor instead of AudioEffectX for beginEdit and endEdit
	* mac: small changes to allow to use a CDrawContext on every Window even those without a CFrame

2004-03-01 arne

	* mac : fix for RGBA Bitmaps on Displays with less than million colors

2004-02-16 arne

	* mac : fix compile error in CDrawContext::getMouseLocation when compiling for CFM plugs
